--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Github\'sUser</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="logo">logo</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="developer">Developer</string>
+    <string name="setting">Setting</string>
+    <string name="home_illustration">home_illustration</string>
+    <string name="developer_detail">Android Native Developer, Web Developer, UI/UX Designer, Comptuer Science Student</string>
+    <string name="developer_name">Ricky Alturino</string>
 </resources>
