--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="developer">Developer</string>
     <string name="setting">Setting</string>
     <string name="home_illustration">home_illustration</string>
-    <string name="developer_detail">Android Native Developer, Web Developer, UI/UX Designer, Comptuer Science Student</string>
+    <string name="developer_detail">Android Native Developer, Web Developer, UI/UX Designer, Computer Science Student</string>
     <string name="developer_name">Ricky Alturino</string>
+    <string name="home_title">Let\'s Search User on Github</string>
 </resources>
