--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="developer_detail">Android Native Developer, Web Developer, UI/UX Designer, Computer Science Student</string>
     <string name="developer_name">Ricky Alturino</string>
     <string name="home_title">Let\'s Search User on Github</string>
+    <string name="followers">Followers</string>
+    <string name="following">Following</string>
+    <string name="repository">Repository</string>
 
 </resources>
